--- a/src/Components/SavedPage/SavedPage.css
+++ b/src/Components/SavedPage/SavedPage.css
@@ -1,7 +1,6 @@
-/* .container {
-  height: 1000px;
+.saved-container {
   padding: 20px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
-} */
+}
