--- a/src/Components/App/FlagCard/FlagCard.css
+++ b/src/Components/App/FlagCard/FlagCard.css
@@ -1,5 +1,5 @@
 .flag-card {   padding: 20px;
   box-sizing: border-box;
-  border: 3px solid black;
+  /* border: 3px solid black; */
   padding: 10px;
 }
