--- a/src/Components/Homepage/Homepage.css
+++ b/src/Components/Homepage/Homepage.css
@@ -2,6 +2,7 @@
   /* background-image: url("/Users/elisejones/mod3/flag-quest-africa/src/images/africaimg.jpeg"); */
   display: flex;
   justify-content: center;
-  padding-top: 5%;
-  width:100%
+  width: 100%; 
+  height: 40em;
 }
+
