--- a/src/Components/SavedPage/SavedPage.css
+++ b/src/Components/SavedPage/SavedPage.css
@@ -1,6 +1,7 @@
 .saved-container {
   padding: 20px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 20px;
+  grid-template-columns: repeat(2, 50%); 
+  /* grid-gap: 20px;
+  /* display: flex; */
 }
