--- a/src/Components/App/FlagCard/FlagCard.css
+++ b/src/Components/App/FlagCard/FlagCard.css
@@ -1,13 +1,15 @@
 .flag-card {   padding: 20px;
   /* box-sizing: border-box; */
-  /* border: 3px solid black; */
+  border: 7px dashed
+  #fcc96e;
   border-radius: 2em ;
   padding: 10px ;
-  width: 100% ;
+  width: 30em ;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 35em;
 }
 .answer-holder {
   display: flex;
@@ -24,7 +26,8 @@
 
 img {
   height: 20em;
-  width: 26em;
+  width: 25em;
+  border: 2px solid black;
 }
 
 input {
