--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -14,21 +14,8 @@ body {
 
 h1 {
   text-align: center;
-  padding-top: 5%;
+  padding-top: 10%;
   padding-bottom: 2%;
-  background-image: url(/Users/elisejones/mod3/flag-quest-africa/src/images/africapattnerback.jpeg);
-}
-
-button {
-  background-image: url(/Users/elisejones/mod3/flag-quest-africa/src/images/africapattnerback.jpeg);
-  height: 3em;
-  border-radius: 1em;
-  padding: 1 rem;
-  margin: 1em;
-  font-weight: bold;
-  border: none;
-  outline: none;
-  font-size: 20px;
 }
 
 .h {
@@ -36,4 +23,10 @@ button {
   width: 100%;
   align-items: center;
   flex-direction: column;
+}
+
+@media only screen and (max-width: 750px) {
+  h1 {
+    margin-top: 10%;
+  }
 }
