--- a/src/Components/SavedPage/SavedPage.css
+++ b/src/Components/SavedPage/SavedPage.css
@@ -11,3 +11,28 @@
   justify-content: center;
   font-size: 2rem;
 }
+
+
+
+
+@media only screen and (max-width: 1357px) {
+  .saved-container {
+    /* grid-template-columns: repeat(1, 25fr);  */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+}
+
+@media only screen and (max-width: 375px) {
+  .saved-container {
+    /* grid-template-columns: repeat(1, 25fr);  */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  h1 {
+    margin-top: 20%;
+  }
+}
