--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -37,3 +37,9 @@
   background-color: #fcc96e;
   color: black;
 }
+
+@media only screen and (max-width: 700px) {
+  .nav-container {
+    font-size: 15px;
+  }
+}
