--- a/src/Components/SavedPage/SavedPage.css
+++ b/src/Components/SavedPage/SavedPage.css
@@ -22,17 +22,18 @@
     flex-direction: column;
     align-items: center;
   }
-  
 }
 
 @media only screen and (max-width: 375px) {
   .saved-container {
-    /* grid-template-columns: repeat(1, 25fr);  */
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   h1 {
     margin-top: 20%;
+  }
+  .no-saved {
+    font-size: 12px;
   }
 }
