--- a/src/Components/App/FlagCard/FlagCard.css
+++ b/src/Components/App/FlagCard/FlagCard.css
@@ -35,7 +35,7 @@ img {
 
 input {
   border-radius: 1em;
-  background-image: url(/Users/elisejones/mod3/flag-quest-africa/src/images/africapattnerback.jpeg);
+  background-color: #fcc96e;;
   height: 60%;
   width: 90%;
 }
@@ -53,7 +53,7 @@ form {
 }
 
 button {
-  background-image: url(/Users/elisejones/mod3/flag-quest-africa/src/images/africapattnerback.jpeg);
+  background-color: #fcc96e;;
   height: 60%;
   border-radius: 1em;
   padding: 1 rem;
