--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -7,8 +7,7 @@
   top: 0;
   margin: 0;
   box-sizing: border-box;
-  background-image: url(/Users/elisejones/mod3/flag-quest-africa/src/images/africapattnerback.jpeg);
-  /* background-color: #ffffff; Fallback color if the image doesn't load or is not visible */
+  background-color: #fcc96e;;
 }
 
 .homenav,
@@ -21,7 +20,7 @@
   border: 1px solid black;
   border-radius: 1em;
   text-align: center;
-  /* background-image: url(/Users/elisejones/mod3/flag-quest-africa/src/images/africapattnerback.jpeg); */
+  /* background-color: #fcc96e;; */
   /* You can remove the background-image from the .homenav and .savenav if you don't want the image as a background */
   /* background-image: none; */
   /* background-color: #ffffff; Fallback color if the image doesn't load or is not visible */
@@ -29,12 +28,12 @@
 
 .homenav:hover,
 .savenav:hover {
-  background-color: #fcc96e;
+  background-color: #c78a21;
 }
 
 .homenav.active,
 .savenav.active {
-  background-color: #fcc96e;
+  background-color: white;
   color: black;
 }
 
