--- a/src/Components/App/FlagCard/FlagCard.css
+++ b/src/Components/App/FlagCard/FlagCard.css
@@ -53,7 +53,7 @@ form {
 }
 
 button {
-  background-color: #fcc96e;;
+  background: url("/Users/elisejones/mod3/flag-quest-africa/src/Components/images/africapattnerback.jpeg");
   height: 60%;
   border-radius: 1em;
   padding: 1 rem;
