--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,10 +1,11 @@
 .nav-container {
   display: flex;
+  gap: 3em;
   justify-content: center;
   width: 100%;
   position: fixed;
   height: 10%;
-  top: 0;
+  padding-top: .5em;
   margin: 0;
   box-sizing: border-box;
   background-color: #fcc96e;;
@@ -37,6 +38,9 @@
   color: black;
 }
 
+.nav-container {
+  background: url("/Users/elisejones/mod3/flag-quest-africa/src/Components/images/africapattnerback.jpeg") ;
+}
 @media only screen and (max-width: 700px) {
   .nav-container {
     font-size: 15px;
