--- a/src/Components/App/FlagCard/FlagCard.css
+++ b/src/Components/App/FlagCard/FlagCard.css
@@ -41,8 +41,9 @@ input {
 }
 
 input::placeholder {
-  color: black; /* Replace with your desired color */
+  color: black;
   font-size: 20px;
+  padding-left: 1em;
 }
 
 form {
