--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -35,7 +35,7 @@
 }
 
 .nav-container {
-  background: url("/Users/elisejones/mod3/flag-quest-africa/src/Components/images/africapattnerback.jpeg") ;
+  background: url("../../images/africapattnerback.jpeg") ;
 }
 @media only screen and (max-width: 700px) {
   .nav-container {
